--- a/src/app/modules/items/components/items-list/items-list.component.html
+++ b/src/app/modules/items/components/items-list/items-list.component.html
@@ -42,9 +42,10 @@
 
         <ng-container matColumnDef="stock">
           <th mat-header-cell *matHeaderCellDef mat-sort-header> Stock </th>
-          <td mat-cell *matCellDef="let element" 
-              [ngClass]="{'low-stock': element.stock <= 5, 'high-stock': element.stock > 100}"> 
-            {{element.stock}} 
+          <td mat-cell *matCellDef="let element">
+            <span [ngClass]="{'low-stock': element.stock <= 5, 'high-stock': element.stock > 100}">
+              {{element.stock}}
+            </span>
           </td>
         </ng-container>
 
