--- a/src/app/modules/roles/components/roles-form/role-form.component.html
+++ b/src/app/modules/roles/components/roles-form/role-form.component.html
@@ -37,15 +37,15 @@
             <div class="permission-group">
                 <mat-checkbox formControlName="canMakeEntry" color="primary">
                     <mat-icon>move_to_inbox</mat-icon>
-                    **Registrar Entradas** (Permiso para añadir stock al inventario)
+                    <b>Registrar Entradas</b> (Permiso para añadir stock al inventario)
                 </mat-checkbox>
                 <mat-checkbox formControlName="canGenerateSeals" color="primary">
                     <mat-icon>lock</mat-icon>
-                    **Generar Números de Sello** (Permiso para reservar sellos de documentos)
+                    <b>Generar Números de Sello</b> (Permiso para reservar sellos de documentos)
                 </mat-checkbox>
                 <mat-checkbox formControlName="canGenerateLetters" color="primary">
                     <mat-icon>mail_outline</mat-icon>
-                    **Generar Números de Carta** (Permiso para reservar números de correspondencia)
+                    <b>Generar Números de Carta</b> (Permiso para reservar números de correspondencia)
                 </mat-checkbox>
             </div>
             
