modifying some files to solve errors about seal numbers table

--- a/src/app/modules/dashboard/components/layout/layout.component.html
+++ b/src/app/modules/dashboard/components/layout/layout.component.html
@@ -23,6 +23,10 @@
         <button mat-button (click)="navigateTo('outputs')" [class.active-link]="isActive('outputs')">
             <mat-icon>outbox</mat-icon> Salidas
         </button>
+        <button mat-button (click)="navigateTo('seal-numbers')" [class.active-link]="isActive('seal-numbers')">
+            <mat-icon>confirmation_number</mat-icon> Sellos
+        </button>
+
         <!-- Aquí podrías añadir el link a 'reports' cuando esté implementado -->
 
     </nav>
