--- a/src/app/modules/seal-numbers/components/seal-numbers-list/seal-numbers-list.component.html
+++ b/src/app/modules/seal-numbers/components/seal-numbers-list/seal-numbers-list.component.html
@@ -29,9 +29,9 @@
           <td mat-cell *matCellDef="let element">{{element.numeroSello}}</td>
         </ng-container>
 
-        <ng-container matColumnDef="userCi">
-          <th mat-header-cell *matHeaderCellDef> Usuario (CI) </th>
-          <td mat-cell *matCellDef="let element">{{element.userCi}}</td>
+        <ng-container matColumnDef="userName">
+          <th mat-header-cell *matHeaderCellDef> Generado por </th>
+          <td mat-cell *matCellDef="let element">{{element.username || '-'}}</td>
         </ng-container>
 
         <ng-container matColumnDef="fecha">
