solving some errores to the complete CRUD of letter numbers

--- a/src/app/modules/dashboard/components/layout/layout.component.html
+++ b/src/app/modules/dashboard/components/layout/layout.component.html
@@ -26,6 +26,9 @@
         <button mat-button (click)="navigateTo('seal-numbers')" [class.active-link]="isActive('seal-numbers')">
             <mat-icon>confirmation_number</mat-icon> Sellos
         </button>
+        <button mat-button (click)="navigateTo('letter-numbers')" [class.active-link]="isActive('letter-numbers')">
+            <mat-icon>confirmation_number</mat-icon> Cartas
+        </button>
 
         <!-- Aquí podrías añadir el link a 'reports' cuando esté implementado -->
 
