--- a/src/app/modules/items/components/item-form/item-form.component.html
+++ b/src/app/modules/items/components/item-form/item-form.component.html
@@ -33,7 +33,7 @@
       <button mat-raised-button color="primary" (click)="save()">
         {{ isEditMode ? 'Actualizar' : 'Crear' }}
       </button>
-      <button mat-raised-button color="warn" routerLink="/dashboard/items">Cancelar</button>
+      <button mat-raised-button type="button" (click)="cancel()">Cancelar</button>
     </form>
   </mat-card-content>
 </mat-card>
